deployment/yarp-gateway/overlays/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarp-gateway
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yarp-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yarp-gateway
    spec:
      imagePullSecrets:
        - name: github-pull-secret
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: yarp-gateway
          image: ghcr.io/teck-lab/teck-cloud/web-public-gateway:development
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
