deployment/yarp-gateway/overlays/development/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarp-gateway
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dev-api.tecklab.dk
spec:
  parentRefs:
    - name: cloudflare-public
      namespace: kgateway-system
  hostnames:
    - dev-api.tecklab.dk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: yarp-gateway
          port: 80
